Thu May  1 10:36:30 CEST 2014
mate/elementary-icon-theme-3.1-noarch-1_microlinux.txz: Added.
mate/elementary-extras-1.0-noarch-1_microlinux.txz: Added.
+--------------------------+
Sat Apr 26 07:10:37 CEST 2014
gnome/gdm-2.20.11-i486-2_microlinux.txz: Rebuilt.
+--------------------------+
Fri Apr 25 07:10:53 CEST 2014
multimedia/libreplaygain-r475-i486-2_microlinux.txz: Rebuilt.
multimedia/libvpx-1.2.0-i486-2_microlinux.txz: Rebuilt.
multimedia/live555-2011.12.23-i486-3_microlinux.txz: Rebuilt.
multimedia/lsdvd-0.16-i486-2_microlinux.txz: Rebuilt.
multimedia/mjpegtools-2.1.0-i486-2_microlinux.txz: Rebuilt.
multimedia/mplayer-codecs-20110131-i486-2_microlinux.txz: Rebuilt.
multimedia/ogmtools-1.5-i486-2_microlinux.txz: Rebuilt.
multimedia/OpenAL-1.15.1-i486-2_microlinux.txz: Rebuilt.
multimedia/opencore-amr-0.1.3-i486-2_microlinux.txz: Rebuilt.
multimedia/openjpeg-1.5.1-i486-2_microlinux.txz: Rebuilt.
multimedia/opus-1.1-i486-1_microlinux.txz: Upgraded.
multimedia/rtmpdump-20131007_a9f353c-i486-2_microlinux.txz: Rebuilt.
multimedia/soundtouch-1.7.1-i486-2_microlinux.txz: Rebuilt.
multimedia/speex-1.2rc1-i486-2_microlinux.txz: Rebuilt.
multimedia/subtitleripper-0.3_4-i486-1_microlinux.txz: Removed.
multimedia/twolame-0.3.13-i486-2_microlinux.txz: Rebuilt.
multimedia/vcdimager-0.7.24-i486-2_microlinux.txz: Rebuilt.
multimedia/x264-20131101-i486-2_microlinux.txz: Rebuilt.
multimedia/xvidcore-1.3.2-i486-2_microlinux.txz: Rebuilt.
multimedia/xvid4conf-1.12-i486-1_microlinux.txz: Removed.
multimedia/faac-1.28-i486-3_microlinux.txz: Rebuilt.
multimedia/libass-0.10.2-i486-2_microlinux.txz: Rebuilt.
multimedia/libshout-2.3.1-i486-3_microlinux.txz: Rebuilt.
multimedia/schroedinger-1.0.11-i486-2_microlinux.txz: Rebuilt.
multimedia/ffmpeg-2.1-i686_custom-2_microlinux.txz: Rebuilt.
multimedia/libquicktime-1.2.4-i486-2_microlinux.txz: Rebuilt.
multimedia/mlt-0.9.0-i486-2_microlinux.txz: Rebuilt.
multimedia/musepack-tools-r475-i486-2_microlinux.txz: Rebuilt.