@@ -1,0 +1,23 @@
+[Desktop Entry]
+Name=Formula Editor
+Name[de]=Formeleditor
+Name[fr]=Éditeur de formules
+Comment=LibreOffice Math
+Version=1.0
+Terminal=false
+Icon=libreoffice4.1-math
+Type=Application
+Categories=Education;
+Exec=libreoffice4.1 --math %U
+MimeType=application/vnd.oasis.opendocument.formula;application/vnd.sun.xml.math;application/vnd.oasis.opendocument.formula-template;text/mathml;
+StartupNotify=true
+X-GIO-NoFuse=true
+Keywords=Equation;OpenDocument Formula;Formula;odf;
+InitialPreference=5
+X-Ayatana-Desktop-Shortcuts=X-New
+StartupWMClass=libreoffice-math
+X-KDE-Protocols=file,http,smb,ftp,webdav
+[X-New Shortcut Group]
+UnityQuicklist=New Formula
+Exec=/opt/libreoffice4.1/program/s-math %U
+TargetEnvironment=Unity
