@@ -1,6 +1,8 @@
 Thu May  1 10:36:30 CEST 2014
 mate/elementary-icon-theme-3.1-noarch-1_microlinux.txz: Added.
 mate/elementary-extras-1.0-noarch-1_microlinux.txz: Added.
+xap/openoffice-4.0.1_en_US-i586-1_microlinux.txz: Removed.
+xap/libreoffice-4.1.6-i586-1_microlinux.txz: Added.
 +--------------------------+
 Sat Apr 26 07:10:37 CEST 2014
 gnome/gdm-2.20.11-i486-2_microlinux.txz: Rebuilt.
